Fix Bootstrap styles overriding. Changed navbar elements alignment.

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -2,19 +2,25 @@
 
 .filter {
   .btn-filter {
-    color: color(primary);
-    border-color: color(primary);
+    color: map_get($colors, 'primary');
+    border-color: map_get($colors, 'primary');
     margin-right: 10px;
+    background-color: map_get($colors, 'light');
+  }
+  .btn-filter.active {
+    color: map_get($colors, 'light');
+    border-color: map_get($colors, 'light');
+    background-color: map_get($colors, 'primary');
   }
   .btn-filter:hover {
-    color: #FFF;
-    border-color: #FFF;
-    background-color: color(primary);
+    color: map_get($colors, 'light');
+    border-color: map_get($colors, 'light');
+    background-color: map_get($colors, 'primary');
   }
   .btn-filter:active {
-    background-color: color(primary) !important;
-    box-shadow: 0 0 0 0.2rem color(primary) !important;
-    border-color: color(primary) !important;
+    background-color: map_get($colors, 'primary');
+    box-shadow: 0 0 0 0.2rem map_get($colors, 'primary');
+    border-color: map_get($colors, 'primary');
   }
   .btn-filter:focus {
     box-shadow: none;
