--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/scss/bootstrap";
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
@@ -15,5 +14,5 @@ $colors: (
 
 html,body {
   height: 100%;
-  font-family: 'Lato';
+  font-family: 'Lato', sans-serif;
 }
